[package]
name = "img2brs"
version = "0.3.0"
authors = ["mraware14 <aaronware14@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "chrono/wasmbind"]

[dependencies]
brs = "0.1"
image = { version = "0.23.0", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds"] } 
wasm-bindgen-futures = "0.4.12"
js-sys = "0.3.39"
console_error_panic_hook = { version = "0.1.1", optional = true }
chrono = "0.4"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  "serde-serialize"
]

[dependencies.web-sys]
version = "0.3.39"
features = [
  "Blob",
  "EventTarget",
  "File",
  "FileReader",
  "FilePropertyBag"
]